# etl

./: .coverage  .gitignore  README.md  fastapi.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 089364fcefcf_create_fetchers_table.py  192f3aeb6420_add_fetchers.py  755d04011b62_create_currencies_table.py  b1077370bb2d_create_currency_rates_table.py  b8171dd50a04_add_currencies.py  eb1ee3605f02_add_exchangerate_fetcher.py
app/: main.py
app/api/v1/: routes.py
app/core/: config.py
app/db/: redis.py  session.py
app/models/: __init__.py  currency.py  currency_rate.py  fetcher.py
app/repositories/: __init__.py  currency_repository.py  exchangerate_repository.py  fetcher_repository.py  frankfurter_repository.py  rate_repository.py
app/services/: __init__.py  currency_service.py  etl_runner.py  rates_service.py
app/services/fetchers/: BaseFetcher.py  ExchangerateFetcher.py  FrankfurterFetcher.py  __init__.py
tests/repositories/: test_currency_repository.py  test_exchangerate_repository.py  test_fetcher_repository.py  test_frankfurter_repository.py  test_rate_repository.py
tests/services/: test_currency_service.py  test_rates_service.py
tests/services/fetchers/: test_exchangerate_fetcher.py  test_frankfurter_fetcher.py
